[package]
name = "proxy_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
